This update ensures that the X is only visible when selecting the the meal

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ input[type="text"] {
   position: absolute;
   top: 10px;
   right: 10px;
+  display: none;
 }
 
 .remove-btn svg,
@@ -133,6 +134,10 @@ input[type="text"] {
   width: 24px;
   height: 24px;
   fill: #000;
+}
+
+.entry.expanded .close-btn {
+  display: block;
 }
 
 .save-btn {
